feat: Se añade eureka client en service client e image.

--- a/services/service-client.properties
+++ b/services/service-client.properties
@@ -14,3 +14,6 @@ spring.datasource.hikari.maximum-pool-size=10
 logging.level.root=INFO
 
 url.service-client-image=${SERVICE.IMAGE}
+
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8093/eureka/
