--- a/services/service-image.properties
+++ b/services/service-image.properties
@@ -8,3 +8,5 @@ spring.data.mongodb.database=${MONGODB.DATABASE}
 mongo.pool.max-size=50
 mongo.pool.min-size=10
 mongo.show-log=true
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8093/eureka/
