--- a/services/service-image.properties
+++ b/services/service-image.properties
@@ -1,5 +1,5 @@
 server.port=${APP.PORT}
-spring.mvc.pathmatch.matching-strategy: ANT_PATH_MATCHER
+spring.mvc.pathmatch.matching-strategy= ANT_PATH_MATCHER
 
 
 mongo.collection=${MONGODB.COLLECTION}
