--- a/services/service-client.properties
+++ b/services/service-client.properties
@@ -1,5 +1,5 @@
 server.port=${APP.PORT}
-# spring.mvc.pathmatch.matching-strategy= ANT_PATH_MATCHER
+spring.mvc.pathmatch.matching-strategy= ANT_PATH_MATCHER
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${BBDD_HOST_WRITER}:${BBDD_HOST_PORT}/${BBDD_NAME}
 spring.jpa.hibernate.ddl-auto=update
