--- a/services/service-client.properties
+++ b/services/service-client.properties
@@ -19,4 +19,4 @@ url.service-client-image=${SERVICE.IMAGE}
 eureka.client.serviceUrl.defaultZone=http://localhost:8093/eureka/
 
 Feign.hystrix.enabled=true
-management.endpoints.web.exposure.include="*"
+management.endpoints.web.exposure.include=appconfiguration-refresh
