fix: enabled circuitbreaker

--- a/services/service-client.properties
+++ b/services/service-client.properties
@@ -18,6 +18,7 @@ url.service-client-image=${SERVICE.IMAGE}
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8093/eureka/
 
-Feign.hystrix.enabled=true
+feign.hystrix.enabled=true
+feign.circuitbreaker.enabled=true
 management.endpoints.web.exposure.include=*
 hystrix.dashboard.proxy-stream-allow-list=*
